--- a/src/components/DisplayValue.css
+++ b/src/components/DisplayValue.css
@@ -4,7 +4,8 @@
   border-radius: 10px;
   padding: 15px;
   box-shadow: 0 2px 5px rgba(255, 255, 255, 0.1);
-  display: inline-block; /* Adjust this to your layout needs */
+  /*display: inline-block; /* Adjust this to your layout needs */
   font-size: 40px;
   font-weight: bold;
+  text-align:center;
 }
