--- a/src/index.css
+++ b/src/index.css
@@ -29,8 +29,7 @@ body {
 
 .btn {
   display: inline-block;
-  background: #000;
-  color: #fff;
+  color: #000000;
   border: none;
   padding: 10px 20px;
   margin: 5px;
@@ -125,4 +124,13 @@ footer {
 .pianoDiv2{
   display: flex;
   justify-content:center;
+}
+
+
+.highlighted:hover {
+    background-color: red;
+ }
+
+ .highlighted {
+  background-color: red;
 }
