--- a/src/components/DisplayValue.css
+++ b/src/components/DisplayValue.css
@@ -1,11 +1,9 @@
 .display-value-box {
-  background-color: #ffffff;
-  border: px solid #ffffff;
+  background-color:#1294c7;
   border-radius: 10px;
   padding: 15px;
-  box-shadow: 0 2px 5px rgba(255, 255, 255, 0.1);
-  /*display: inline-block; /* Adjust this to your layout needs */
   font-size: 40px;
-  font-weight: bold;
+  font-weight: bolder;
   text-align:center;
+  color: rgb(0, 0, 0);
 }
