--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');  
 
 * {
   box-sizing: border-box;
@@ -11,6 +8,7 @@
 
 body {
   font-family: 'Poppins', sans-serif;
+  background-color: #1294c7;
 }
 
 .container {
@@ -18,7 +16,7 @@ body {
   margin: 30px auto;
   overflow: auto;
   min-height: 300px;
-  border: 1px solid steelblue;
+  border: 1px solid rgb(135, 185, 226);
   padding: 30px;
   border-radius: 5px;
 }
@@ -114,21 +112,23 @@ footer {
 }
 
 .contentDiv{
-  display: flex;
-  justify-content:center;
-
+  display: grid;
+  justify-content: space-evenly;
+  font-weight: bolder;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .pianoDiv1{
   display: flex;
-  justify-content:center;
+  justify-content: space-evenly;
 }
 
-.pianoDiv2{
+.subh{
   display: flex;
-  justify-content:center;
-}
+  justify-content: space-evenly;
+  font-weight: bold;
 
+}
 
 .highlighted:hover {
     background-color: red;
@@ -136,4 +136,35 @@ footer {
 
  .highlighted {
   background-color: red;
+}  
+
+.highlightedC:hover {
+  background-color: rgb(0, 250, 21);
 }
+
+
+
+.highlightedC {
+  background-color: rgb(21, 255, 0);
+  }  
+  
+
+  .highlightedC:hover {
+    background-color: rgb(0, 250, 12);
+  }
+  
+
+  .highlightedS {
+    background-color: rgb(0, 44, 238);
+    }  
+    
+  
+    .highlightedS:hover {
+      background-color: rgb(63, 0, 238);
+    }
+    
+  
+  
+  .highlighteddef {
+    background-color: rgb(255, 255, 255);
+    }  
