--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,18 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  
 }
 
 body {
+  position: relative; /* Make the body element a positioning context */
   font-family: 'Poppins', sans-serif;
-  background-color: #1294c7;
+  background-image: url(../piano-background.jpg);
+  color: white;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+  background-size: cover;
 }
+
 
 .container {
   max-width: 500px;
@@ -138,33 +144,4 @@ footer {
   background-color: rgb(0, 250, 12);
 }  
 
-.highlightedC:hover {
-  background-color: rgb(0, 250, 21);
-}
-
-
-
-.highlightedC {
-  background-color: rgb(21, 255, 0);
-  }  
   
-
-  .highlightedC:hover {
-    background-color: rgb(0, 250, 12);
-  }
-  
-
-  .highlightedS {
-    background-color: rgb(0, 250, 12);
-    }  
-    
-  
-    .highlightedS:hover {
-      background-color: rgb(0, 250, 12);
-    }
-    
-  
-  
-  .highlighteddef {
-    background-color: rgb(255, 255, 255);
-    }  
