--- a/src/index.css
+++ b/src/index.css
@@ -10,8 +10,9 @@
 body {
   position: relative; /* Make the body element a positioning context */
   font-family: 'Poppins', sans-serif;
-  background-image: url(../piano-background.jpg);
-  color: white;
+  /*background-image: url(../piano-background.jpg);*/
+  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../piano-background.jpg');
+  color: rgb(255, 255, 255);
   text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
   background-size: cover;
 }
