--- a/src/index.css
+++ b/src/index.css
@@ -123,6 +123,7 @@ footer {
   justify-content: space-evenly;
   font-weight: bolder;
   font-family: Arial, Helvetica, sans-serif;
+  margin-top: 40px;
 }
 
 .pianoDiv1{
@@ -144,5 +145,3 @@ footer {
  .highlighted {
   background-color: rgb(0, 250, 12);
 }  
-
-  
