--- a/src/components/DisplayValue.css
+++ b/src/components/DisplayValue.css
@@ -1,8 +1,7 @@
 .display-value-box {
-  border-radius: 10px;
-  padding: 15px;
+  padding: 10px;
   font-size: 40px;
-  font-weight: bolder;
-  text-align:center;
+  font-weight: bold;
+  text-align: center;
   color: rgb(255, 255, 255);
 }
