--- a/src/index.css
+++ b/src/index.css
@@ -1,38 +1,20 @@
-  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');  
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap");
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  
 }
 
 body {
-  position: relative; /* Make the body element a positioning context */
-  font-family: 'Poppins', sans-serif;
-  /*background-image: url(../piano-background.jpg);*/
-  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../piano-background.jpg');
+  background-image: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 0.5),
+      rgba(0, 0, 0, 0.5)
+    ),
+    url("../piano-background.jpg");
   color: rgb(255, 255, 255);
-  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
   background-size: cover;
-}
-
-
-.container {
-  max-width: 500px;
-  margin: 30px auto;
-  overflow: auto;
-  min-height: 300px;
-  border: 1px solid rgb(135, 185, 226);
-  padding: 30px;
-  border-radius: 5px;
-}
-
-.header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 20px;
 }
 
 .btn {
@@ -48,100 +30,53 @@ body {
   font-family: inherit;
 }
 
-.btn:focus {
-  outline: none;
-}
-
-.btn:active {
-  transform: scale(0.98);
-}
-
-.btn-block {
-  display: block;
-  width: 100%;
-}
-
-.task {
-  background: #f4f4f4;
-  margin: 5px;
-  padding: 10px 20px;
-  cursor: pointer;
-}
-
-.task.reminder {
-  border-left: 5px solid green;
-}
-
-.task h3 {
+.contentDiv {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.add-form {
-  margin-bottom: 40px;
-}
-
-.form-control {
-  margin: 20px 0;
-}
-
-.form-control label {
-  display: block;
-}
-
-.form-control input {
-  width: 100%;
-  height: 40px;
-  margin: 5px;
-  padding: 3px 7px;
-  font-size: 17px;
-}
-
-.form-control-check {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.form-control-check label {
-  flex: 1;
-}
-
-.form-control-check input {
-  flex: 2;
-  height: 20px;
-}
-
-footer {
-  margin-top: 30px;
-  text-align: center;
-}
-
-.contentDiv{
-  display: grid;
   justify-content: space-evenly;
-  font-weight: bolder;
-  font-family: Arial, Helvetica, sans-serif;
-  margin-top: 40px;
+  margin-top: 15px;
+  margin-bottom: 0px;
 }
 
-.pianoDiv1{
+.logout {
+  display: flex;
+  justify-content: center;
+}
+
+.notes {
+  margin-top: 15px;
   display: flex;
   justify-content: space-evenly;
 }
 
-.subh{
+.chords {
+  display: flex;
+  justify-content: center;
+}
+
+.scales {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.navbar {
+  flex-direction: flex-end;
+}
+
+.pianoDiv {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.subh {
   display: flex;
   justify-content: space-evenly;
   font-weight: bold;
-
 }
 
 .highlighted:hover {
-    background-color: rgb(0, 250, 12);
- }
-
- .highlighted {
   background-color: rgb(0, 250, 12);
-}  
+}
+
+.highlighted {
+  background-color: rgb(0, 250, 12);
+}
