--- a/src/index.css
+++ b/src/index.css
@@ -197,8 +197,8 @@ body {
 }
 
 .profileimg {
-  height: 300px;
-  width: 300px;
+  height: 240px;
+  width: 220px;
   border-radius: 50%;
   border: 10px solid #ffff;
 }
@@ -208,4 +208,11 @@ body {
   height: "150px";
   display: inline-block;
   margin: "5px";
+}
+
+.timer {
+  display: flex;
+  justify-content: center;
+  font-size: 25px;
+  font-weight: bold;
 }
