--- a/src/index.css
+++ b/src/index.css
@@ -176,22 +176,16 @@ body {
 
 .inputquiz {
   margin: 5px;
-  width: 40px;
-  height: 30px;
+  width: 50px;
+  height: 40px;
   display: block;
+  border-radius: 10px;
 }
 
 .App {
   width: 100vw;
   height: auto;
   display: flex;
-  align-items: center;
-  flex-direction: column;
-}
-
-.displayuploaded {
-  display: flex;
-  border-image-width: 20px;
   align-items: center;
   flex-direction: column;
 }
@@ -203,16 +197,37 @@ body {
   border: 10px solid #ffff;
 }
 
-.imageStyle {
-  width: "200px";
-  height: "150px";
-  display: inline-block;
-  margin: "5px";
-}
-
 .timer {
   display: flex;
   justify-content: center;
   font-size: 25px;
   font-weight: bold;
+}
+
+.quiz_type {
+  display: flex;
+  justify-content: center;
+  font-size: 16px;
+}
+
+.containerquiz {
+  width: 35%;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #f61a303f;
+  border: 5px solid #ccc;
+}
+
+.containeraccount {
+  width: 55%;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #f61a303f;
+  border: 5px solid #ccc;
+}
+
+.keyselection {
+  display: flex;
+  justify-content: center;
+  font-size: 16px;
 }
