--- a/src/index.css
+++ b/src/index.css
@@ -227,7 +227,8 @@ body {
 }
 
 .keyselection {
-  display: flex;
+  flex-direction: column;
+  width: 20%;
+  margin: 0 auto;
   justify-content: center;
-  font-size: 16px;
 }
