--- a/src/index.css
+++ b/src/index.css
@@ -232,3 +232,50 @@ body {
   margin: 0 auto;
   justify-content: center;
 }
+
+.cheatbtn {
+  justify-content: center;
+  display: flex;
+  font-weight: bold;
+  font-size: 20px;
+  margin: 0px;
+  padding: 0px;
+}
+
+.inputvalues {
+  margin-left: 10px;
+  text-align: center;
+}
+
+.quiztitle {
+  justify-content: center;
+  display: flex;
+  margin-top: 50px;
+}
+
+.checkanwerresult[quizResult="false"] {
+  color: "red";
+  justify-content: center;
+  display: flex;
+  font-weight: bold;
+  font-size: 35px;
+  margin: 0px;
+  padding: 0px;
+}
+
+.posttitle {
+  justify-content: center;
+  display: flex;
+  margin-top: 80px;
+}
+
+.setpostwidth {
+  margin-left: "6%";
+  margin-right: "5%";
+} /* Not working for setting post width of size rn using inline rn */
+
+.imgsize {
+  width: 300px;
+  height: 350px;
+  margin: 15px;
+}
