--- a/src/index.css
+++ b/src/index.css
@@ -204,14 +204,9 @@ body {
   font-weight: bold;
 }
 
-.quiz_type {
-  display: flex;
-  justify-content: center;
-  font-size: 16px;
-}
-
 .containerquiz {
-  width: 35%;
+  width: 1300px;
+  height: auto;
   margin: 0 auto;
   padding: 20px;
   background-color: #f61a303f;
@@ -243,13 +238,14 @@ body {
 }
 
 .inputvalues {
-  margin-left: 10px;
+  margin-left: 5px;
   text-align: center;
 }
 
 .quiztitle {
   justify-content: center;
   display: flex;
+  font-weight: bold;
   margin-top: 50px;
 }
 
@@ -278,4 +274,57 @@ body {
   width: 300px;
   height: 350px;
   margin: 15px;
+}
+
+.selectquiz {
+  position: absolute;
+  width: 80px;
+  height: 40px;
+  border-radius: 15px;
+}
+
+.quiz_type {
+  display: flex;
+  justify-content: center;
+  font-size: 16px;
+}
+
+.keyselection-column {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+.keyselection-div {
+  display: flex;
+  justify-content: center;
+}
+
+.input_container {
+  display: flex;
+}
+
+.inputsquiz {
+  display: flex;
+  justify-content: center;
+}
+
+.keyselection {
+  position: absolute;
+  top: 80px;
+  right: 490px;
+  width: 120px;
+}
+
+.boldthis {
+  font-weight: bold;
+  font-size: 30px;
+}
+
+.quizinfo {
+  position: absolute;
+  top: 120px;
+  left: 400px;
+  width: 250px;
 }
