--- a/src/components/Play_Piano/Key.css
+++ b/src/components/Play_Piano/Key.css
@@ -17,7 +17,7 @@
 
 .key.pressed,
 .key.flat.pressed {
-  background-color: #f61a30;
+  background-color: #a7450d;
 }
 
 .key-text {
@@ -27,4 +27,10 @@
   font-size: 36px;
   margin-top: 240px;
   pointer-events: none;
+}
+
+.piano {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
