--- a/src/index.css
+++ b/src/index.css
@@ -7,14 +7,8 @@
 }
 
 body {
-  background-image: linear-gradient(
-      0deg,
-      rgba(0, 0, 0, 0.5),
-      rgba(0, 0, 0, 0.5)
-    ),
-    url("../src/content/piano-background.jpg");
+  background-color: rgb(150, 93, 19);
   color: rgb(255, 255, 255);
-  background-size: cover;
 }
 
 .btn {
@@ -30,8 +24,8 @@ body {
 }
 
 .btn-danger {
-  --bs-btn-bg: #f61a30;
-  --bs-btn-hover-bg: #f61a30;
+  --bs-btn-bg: #a7450d;
+  --bs-btn-hover-bg: #a7450d;
 }
 
 .contentDiv {
@@ -39,126 +33,6 @@ body {
   justify-content: space-evenly;
   margin-top: 15px;
   margin-bottom: 0px;
-}
-
-.right-button {
-  position: absolute;
-  top: 50%; /* Adjust this value as needed to vertically center the button */
-  right: 18%; /* Adjust this value to control the distance from the right side */
-  transform: translateY(
-    -50%
-  ); /* Vertically center the button relative to its container */
-}
-
-.logonav {
-  position: absolute;
-  top: 50%; /* Adjust this value as needed to vertically center the button */
-  right: 38%; /* Adjust this value to control the distance from the right side */
-  transform: translateY(
-    -50%
-  ); /* Vertically center the button relative to its container */
-}
-
-.right-align {
-  position: absolute;
-  top: 50%; /* Adjust this value as needed to vertically center the element */
-  right: 130px; /* Adjust this value to control the distance from the right side */
-  transform: translateY(
-    -50%
-  ); /* Vertically center the element relative to its container */
-}
-
-.centered-h1 {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 37px;
-  font-family: Impact, fantasy;
-  color: #f61a30;
-}
-
-.notes {
-  margin-top: 55px;
-  display: flex;
-
-  justify-content: space-evenly;
-}
-
-.chords {
-  display: flex;
-  justify-content: center;
-}
-
-.scales {
-  display: flex;
-  justify-content: space-evenly;
-}
-
-.pianoDiv {
-  display: flex;
-  justify-content: space-evenly;
-}
-
-.subh {
-  display: flex;
-  justify-content: space-evenly;
-  font-weight: bold;
-}
-
-.highlighted:hover {
-  background-color: #f61a30;
-}
-
-.highlighted {
-  background-color: #f61a30;
-}
-
-.outerSignupDiv {
-  display: flex;
-  justify-content: center;
-}
-
-.display-value-box {
-  padding: 10px;
-  font-size: 40px;
-  font-weight: bold;
-  text-align: center;
-  color: rgb(255, 255, 255);
-}
-
-.piano {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
-
-.navbarbg {
-  background-color: #020815;
-}
-
-.active {
-  color: #f61a30;
-  text-decoration: none;
-  font-size: 16px;
-  font-weight: bold;
-}
-
-.navbarstyle {
-  color: white;
-  text-decoration: none;
-  font-size: 16px;
-  font-weight: bold;
-}
-
-.navbarstyle2 {
-  color: white;
-  text-decoration: none;
-  display: block;
-  height: 100%;
-  width: 100%;
-  font-size: 16px;
-  font-weight: bold;
 }
 
 .textcenter {
@@ -173,166 +47,4 @@ body {
   .logonav {
     display: none;
   }
-}
-
-.inputquiz {
-  margin: 5px;
-  width: 50px;
-  height: 40px;
-  display: block;
-  border-radius: 10px;
-}
-
-.owncorrect {
-  background-color: rgb(46, 194, 46);
-}
-
-.ownincorrect {
-  background-color: rgb(247, 31, 31);
-}
-.App {
-  width: 100vw;
-  height: auto;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-}
-
-.profileimg {
-  height: 235px;
-  width: 215px;
-  border-radius: 50%;
-  border: 10px solid #ffff;
-}
-
-.timer {
-  display: flex;
-  justify-content: center;
-  font-size: 25px;
-  font-weight: bold;
-}
-
-.containerquiz {
-  width: 1300px;
-  height: auto;
-  margin: 0 auto;
-  padding: 20px;
-  background-color: #f61a303f;
-  border: 5px solid #ccc;
-}
-
-.containeraccount {
-  width: 55%;
-  margin: 0 auto;
-  padding: 20px;
-  background-color: #f61a303f;
-  border: 5px solid #ccc;
-}
-
-.keyselection {
-  flex-direction: column;
-  width: 20%;
-  margin: 0 auto;
-  justify-content: center;
-}
-
-.cheattext {
-  justify-content: center;
-  display: flex;
-  font-weight: bold;
-  font-size: 20px;
-  margin: 0px;
-  padding: 0px;
-}
-
-.inputvalues {
-  margin-left: 5px;
-  text-align: center;
-}
-
-.quiztitle {
-  justify-content: center;
-  display: flex;
-  font-weight: bold;
-  margin-top: 50px;
-}
-
-.checkanwerresult {
-  color: red;
-  justify-content: center;
-  display: flex;
-  font-weight: bold;
-  font-size: 35px;
-  margin: 0px;
-  padding: 0px;
-}
-
-.posttitle {
-  justify-content: center;
-  display: flex;
-  margin-top: 80px;
-}
-
-.setpostwidth {
-  margin-left: "6%";
-  margin-right: "5%";
-} /* Not working for setting post width of size rn using inline rn */
-
-.imgsize {
-  width: 300px;
-  height: 350px;
-  margin: 15px;
-}
-
-.selectquiz {
-  position: absolute;
-  width: 80px;
-  height: 40px;
-  border-radius: 15px;
-}
-
-.quiz_type {
-  display: flex;
-  justify-content: center;
-  font-size: 16px;
-}
-
-.keyselection-column {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 10px;
-}
-
-.keyselection-div {
-  display: flex;
-  justify-content: center;
-}
-
-.input_container {
-  display: flex;
-}
-
-.inputsquiz {
-  display: flex;
-  justify-content: center;
-}
-
-.keyselection {
-  position: absolute;
-  top: 80px;
-  right: 490px;
-  width: 120px;
-}
-
-.boldthis {
-  font-weight: bold;
-  font-size: 30px;
-}
-
-.quizinfo {
-  position: absolute;
-  top: 120px;
-  left: 400px;
-  width: 250px;
 }
