--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -1,7 +1,7 @@
 .highlighted:hover {
-  background-color: #f61a30;
+  background-color: rgba(242, 170, 76, 0.8);
 }
 
 .highlighted {
-  background-color: #f61a30;
+  background-color: rgba(242, 170, 76, 0.8);
 }
