--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,13 @@
-.App {
+.footer {
   width: 100vw;
   height: auto;
   display: flex;
   align-items: center;
   flex-direction: column;
+}
+
+@media (max-width: 768px) {
+  .footer {
+    display: none;
+  }
 }
