--- a/src/components/Play_Piano/Key.css
+++ b/src/components/Play_Piano/Key.css
@@ -17,7 +17,7 @@
 
 .key.pressed,
 .key.flat.pressed {
-  background-color: #a7450d;
+  background-color: darkslategray;
 }
 
 .key-text {
@@ -29,8 +29,25 @@
   pointer-events: none;
 }
 
-.piano {
+.pianotextcenter {
   display: flex;
-  flex-direction: row;
   justify-content: center;
+  color: rgb(255, 255, 255);
+}
+
+@media screen and (min-width: 0px) and (max-width: 768px) {
+  .piano {
+    display: none;
+  }
+  .pianotextcenter {
+    display: none;
+  }
+}
+
+@media (width >= 768px) {
+  .piano {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
 }
