--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background-color: rgb(150, 93, 19);
+  background-color: rgb(0, 0, 0);
   color: rgb(255, 255, 255);
 }
 
@@ -24,8 +24,8 @@ body {
 }
 
 .btn-danger {
-  --bs-btn-bg: #a7450d;
-  --bs-btn-hover-bg: #a7450d;
+  --bs-btn-bg: #f2aa4cff;
+  --bs-btn-hover-bg: #f2aa4cff;
 }
 
 .contentDiv {
@@ -35,12 +35,7 @@ body {
   margin-bottom: 0px;
 }
 
-.textcenter {
-  display: flex;
-  justify-content: center;
-}
-
-@media (max-width: 1200px) {
+@media (max-width: 1768px) {
   .centered-h1 {
     display: none;
   }
