--- a/src/components/Navbars/TopNavbar.css
+++ b/src/components/Navbars/TopNavbar.css
@@ -7,9 +7,9 @@ nav {
   justify-content: space-between;
   align-items: center;
   background-color: #0f172a;
+  color: white;
   position: sticky;
   top: 0;
-  height: 3.5rem;
 }
 
 nav .title {
@@ -25,7 +25,7 @@ nav .title {
 
 nav ul {
   display: flex;
-  margin-top: 1.1rem;
+  margin-top: 10px;
 }
 
 nav ul li {
@@ -49,7 +49,7 @@ nav ul li a:not(.active):hover {
 nav .menu {
   display: none;
   position: absolute;
-  top: 0.75rem;
+  top: 1.3rem;
   right: 0.5rem;
   flex-direction: column;
   justify-content: space-between;
@@ -83,7 +83,7 @@ nav .menu span {
 
   nav ul.open {
     display: flex;
-    padding: 0;
+    padding: 0px;
   }
 
   nav ul li {
@@ -93,6 +93,12 @@ nav .menu span {
 
   nav ul li a {
     margin: 0.2rem 0.5rem;
+  }
+
+  .btnlogout {
+    display: flex;
+    justify-content: center;
+    margin-left: 10px;
   }
 }
 
