--- a/src/components/Notes/Note.css
+++ b/src/components/Notes/Note.css
@@ -3,8 +3,19 @@
   justify-content: center;
 }
 
-@media (max-width: 768px) {
+.note-dropdown {
+  display: none;
+  justify-content: center;
+}
+
+@media (min-width: 0px) and (max-width: 786px) {
+  .note-dropdown {
+    display: flex;
+    justify-content: center;
+    margin: 3% auto;
+  }
   .notes {
     display: none;
+    justify-content: center;
   }
 }
