--- a/src/components/pages/Post/Post.css
+++ b/src/components/pages/Post/Post.css
@@ -1,30 +1,19 @@
-.posttitle {
-  justify-content: center;
-  display: flex;
-  margin-top: 80px;
-}
-
-.setpostwidth {
-  margin-left: "6%";
-  margin-right: "5%";
-} /* Not working for setting post width of size rn using inline rn */
-
 .imgsize {
   width: 300px;
-  height: 350px;
-  margin: 15px;
+  height: 300px;
+  margin: 30px;
+}
+
+.img-container {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  margin: 40px 40px;
 }
 
 .post {
-  width: 100vw;
-  height: auto;
+  margin: 10px;
   display: flex;
   align-items: center;
   flex-direction: column;
-}
-
-@media (max-width: 768px) {
-  .post {
-    display: none;
-  }
 }
