--- a/src/components/pages/Quiz/Quiz.css
+++ b/src/components/pages/Quiz/Quiz.css
@@ -28,7 +28,7 @@
   display: flex;
   justify-content: center;
   margin: 5px;
-  width: 50px;
+  width: 43px;
   height: 40px;
   display: block;
   border-radius: 10px;
@@ -48,6 +48,7 @@
   justify-content: center;
   font-size: 18px;
   font-weight: bold;
+  margin: 2px;
 }
 
 .keyselection-column {
