--- a/src/components/pages/Quiz/Quiz.css
+++ b/src/components/pages/Quiz/Quiz.css
@@ -1,17 +1,22 @@
-.quizsubtitle {
+.quizpage {
+  height: 100vh;
+}
+
+.quiztitle {
   margin-top: 1%;
   justify-content: center;
   display: flex;
   text-align: center;
-  font-size: 18px;
+  font-size: 45px;
   font-weight: bold;
 }
 .quiztext {
   justify-content: center;
   display: flex;
   text-align: center;
-  font-size: 12px;
+  font-size: 21.06px;
 }
+
 .quiz_type {
   display: flex;
   justify-content: center;
@@ -72,5 +77,27 @@
   .quizinfo {
     width: 40%;
     margin-left: 30%;
+  }
+}
+
+@media (max-width: 768px) {
+  .quiztitle {
+    margin-top: 1%;
+    justify-content: center;
+    display: flex;
+    text-align: center;
+    font-size: 27px;
+    font-weight: bold;
+  }
+
+  .quiztext {
+    justify-content: center;
+    display: flex;
+    text-align: center;
+    font-size: 18px;
+  }
+
+  .quizpage {
+    height: 100%;
   }
 }
