--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Kanit:wght@700&display=swap");
 
 * {
   box-sizing: border-box;
@@ -7,8 +7,12 @@
 }
 
 body {
-  background-color: beige;
+  background: linear-gradient(to bottom, #ffffff 10%, #d85905, #53cff5);
+  color: rgb(0, 0, 0);
+  margin: 0; /* Remove default body margin */
+  padding: 0; /* Remove default body padding */
 }
+
 .btn {
   display: inline-block;
   border: none;
