--- a/src/components/Chords/Chords.css
+++ b/src/components/Chords/Chords.css
@@ -3,11 +3,7 @@
   justify-content: center;
 }
 
-.chord-dropdown {
-  display: none;
-  justify-content: center;
-}
-
+.chord-dropdown,
 .chord_label {
   display: none;
   justify-content: center;
