--- a/src/components/Scales/Scales.css
+++ b/src/components/Scales/Scales.css
@@ -3,11 +3,7 @@
   justify-content: center;
 }
 
-.scales-dropdown {
-  display: none;
-  justify-content: center;
-}
-
+.scales-dropdown,
 .scales_label {
   display: none;
   justify-content: center;
