--- a/src/components/pages/Contactme/Contactme.css
+++ b/src/components/pages/Contactme/Contactme.css
@@ -1,11 +1,6 @@
-.profileimg {
-  height: 235px;
-  width: 215px;
-  border-radius: 50%;
-  border: 10px solid #ffff;
-}
+@import url("https://fonts.googleapis.com/css2?family=Kanit:wght@700&display=swap");
 
-.subh {
+.contactmecenter {
   display: flex;
   justify-content: space-evenly;
   font-weight: bold;
@@ -20,8 +15,12 @@
   font-weight: bold;
 }
 
-.contactmepage {
-  height: 100vh;
+.btn_contactme_submit,
+.btn_contactme_submit:hover,
+.btn_contactme_submit:active {
+  background-color: rgb(11, 118, 219) !important;
+  color: white !important;
+  font-family: "Kanit";
 }
 
 @media (max-width: 768px) {
