--- a/src/components/pages/Post/Post.css
+++ b/src/components/pages/Post/Post.css
@@ -12,12 +12,11 @@
 }
 
 .post {
-  margin: 10px;
   display: flex;
   align-items: center;
   flex-direction: column;
 }
 
 .postpage {
-  height: 100%;
+  height: 100vh;
 }
