--- a/src/components/pages/Quiz/Quiz.css
+++ b/src/components/pages/Quiz/Quiz.css
@@ -10,23 +10,13 @@
   font-size: 45px;
   font-weight: bold;
 }
-.quiztext {
+.quiztext,
+.quiz_type,
+.inputsquiz {
   justify-content: center;
   display: flex;
   text-align: center;
   font-size: 21.06px;
-}
-
-.quiz_type {
-  display: flex;
-  justify-content: center;
-  font-size: 16px;
-}
-
-.inputsquiz {
-  display: flex;
-  justify-content: center;
-  text-align: center;
 }
 
 .inputquiz {
@@ -63,11 +53,7 @@
   gap: 10px;
 }
 
-.keyselection-div {
-  display: flex;
-  justify-content: center;
-}
-
+.keyselection-div,
 .quiz_class {
   display: flex;
   justify-content: center;
