--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,8 @@
 }
 
 body {
-  background: linear-gradient(to bottom, #ffffff 10%, #d85905, #53cff5);
+  background: white;
   color: rgb(0, 0, 0);
-  margin: 0; /* Remove default body margin */
-  padding: 0; /* Remove default body padding */
 }
 
 .btn {
@@ -19,7 +17,6 @@ body {
   padding: 10px 20px;
   margin: 5px;
   border-radius: 5px;
-  cursor: pointer;
   text-decoration: none;
   font-size: 15px;
   font-family: inherit;
