--- a/src/components/pages/Basic/Basics.css
+++ b/src/components/pages/Basic/Basics.css
@@ -20,6 +20,42 @@
   margin: 0% 10%;
 }
 
+.btn_basics_submit,
+.btn_basics_submit:hover,
+.btn_basics_submit:active {
+  border: 1px solid rgb(0, 0, 0) !important;
+  border-radius: 50px !important;
+  color: rgb(0, 0, 0) !important;
+  font-family: "Kanit";
+}
+
+.herogroup {
+  width: 800px;
+}
+
+.colswidth {
+  display: flex;
+  justify-content: center;
+}
+.cols {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  width: 1500px;
+}
+
+.colstext {
+  border: solid 3px;
+  margin: 2%;
+  text-align: center;
+  width: 400px;
+}
+
+.youtubevid {
+  width: 800px;
+  height: 400px;
+}
+
 @media (max-width: 768px) {
   .introtext {
     display: flex;
@@ -36,5 +72,41 @@
 
   .heroimg {
     display: none;
+  }
+
+  .herosection {
+    flex-wrap: wrap;
+  }
+
+  .youtubevid {
+    width: auto;
+    height: auto;
+  }
+
+  .item:nth-child(1) {
+    order: 2;
+  }
+
+  .item:nth-child(2) {
+    order: 1;
+  }
+}
+
+@media (max-width: 1440px) {
+  .youtubevid {
+    width: auto;
+    height: auto;
+  }
+}
+
+@media (max-width: 1024px) {
+  .cols {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .colstext {
+    width: 350px;
   }
 }
