--- a/src/components/pages/Basic/Basics.css
+++ b/src/components/pages/Basic/Basics.css
@@ -23,12 +23,21 @@
 .btn_basics_submit,
 .btn_basics_submit:hover,
 .btn_basics_submit:active {
-  border: 1px solid rgb(0, 0, 0) !important;
-  border-radius: 50px !important;
-  color: rgb(0, 0, 0) !important;
+  border-radius: 25px !important;
+  background-color: black;
+  color: rgb(255, 255, 255) !important;
   font-family: "Kanit";
 }
 
+.btn_learn_submit,
+.btn_learn_submit:hover,
+.btn_learn_submit:active {
+  border-radius: 25px !important;
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0) !important;
+  font-family: "Kanit";
+  font-weight: bold;
+}
 .herogroup {
   width: 800px;
 }
@@ -36,24 +45,62 @@
 .colswidth {
   display: flex;
   justify-content: center;
+  background-color: black;
+  color: white;
 }
+
 .cols {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
-  width: 1500px;
+  justify-content: flex-start;
+  width: 1920px;
+  z-index: 1;
 }
 
 .colstext {
-  border: solid 3px;
-  margin: 2%;
+  display: flex;
+  flex-direction: column;
+  margin-left: 10%;
+  margin-top: 5%;
   text-align: center;
-  width: 400px;
+  align-items: center;
+  width: 500px;
 }
 
 .youtubevid {
   width: 800px;
   height: 400px;
+}
+
+@media (max-width: 1440px) {
+  .youtubevid {
+    width: auto;
+    height: auto;
+  }
+  .learnpiano {
+    width: 600px;
+    height: 400px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .cols {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .colstext {
+    width: 350px;
+    display: flex;
+    text-align: center;
+    margin-left: 0;
+  }
+
+  .learnpiano {
+    width: 390px;
+    height: 300px;
+  }
 }
 
 @media (max-width: 768px) {
@@ -89,24 +136,5 @@
 
   .item:nth-child(2) {
     order: 1;
-  }
-}
-
-@media (max-width: 1440px) {
-  .youtubevid {
-    width: auto;
-    height: auto;
-  }
-}
-
-@media (max-width: 1024px) {
-  .cols {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .colstext {
-    width: 350px;
   }
 }
