--- a/src/components/Navbars/TopNavbar.css
+++ b/src/components/Navbars/TopNavbar.css
@@ -79,6 +79,10 @@ nav .btnlogout {
   background-color: transparent;
 }
 
+.drop {
+  margin-top: 8px;
+}
+
 @media (max-width: 1000px) {
   nav .menu {
     display: flex;
@@ -87,6 +91,10 @@ nav .btnlogout {
   nav {
     flex-direction: column;
     align-items: flex-start;
+  }
+
+  .dropdown-menu.show {
+    margin-left: 35%;
   }
 
   nav ul {
