--- a/src/components/pages/Account/Account.css
+++ b/src/components/pages/Account/Account.css
@@ -1,3 +1,10 @@
 .accountpage {
   height: 100vh;
 }
+
+.input_selection {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
